<resources>
    <string name="app_name">Outer Space Manager</string>
    <string name="identifiant">Identifiant</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="vue_generale">Vue générale</string>
    <string name="flotte">Flotte</string>
    <string name="recherches">Recherches</string>
    <string name="galaxie">Galaxie</string>
    <string name="chantier_spatial">Chantier spatial</string>
    <string name="batiments">Bâtiments</string>
    <string name="inscription">Inscription</string>
    <string name="se_connecter">Se connecter</string>
    <string name="metaux">Métaux</string>
    <string name="gaz">Gaz</string>
    <string name="temps_de_construction">Temps de construction</string>
    <string name="construire">Construire</string>
    <string name="construction_en_cours">Construction en cours...</string>
    <string name="rechercher">Rechercher</string>
    <string name="recherche_en_cours">Recherche en cours...</string>
    <string name="classement">Classement</string>
    <string name="joueur">Joueur :</string>
    <string name="points">Points :</string>
    <string name="fabriquer">Fabriquer</string>
    <string name="max">Max</string>
    <string name="reset">Reset</string>
    <string name="plus100">+ 100</string>
    <string name="fleche_gauche"><![CDATA[<--]]></string>
    <string name="fleche_droite"><![CDATA[-->]]></string>
    <string name="image_du_vaisseau">Image du vaisseau</string>
    <string name="email">Email</string>
</resources>
