<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="175dp" />

    <Button
        android:text="@string/deconnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/logout"
        android:textAlignment="center"
        android:textSize="12sp"
        tools:ignore="RelativeOverlap" />

    <Button
        android:text="@string/vue_generale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/points"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:id="@+id/overView"
        android:textAlignment="center" />

    <Button
        android:text="@string/flotte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buildings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:id="@+id/fleet"
        android:textAlignment="center" />

    <Button
        android:text="@string/recherches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fleet"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:id="@+id/research"
        android:textAlignment="center" />

    <Button
        android:text="@string/galaxie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/galaxy"
        android:textAlignment="center"
        android:layout_below="@+id/sheepBuilder"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/chantier_spatial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/sheepBuilder"
        android:textAlignment="center"
        android:layout_below="@+id/research"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/batiments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buildings"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/overView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/points"
        android:textSize="12sp"
        android:textAlignment="center"
        android:layout_width="175dp"
        android:layout_below="@+id/userName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mineralsLabel"
        android:text="@string/metaux"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_alignTop="@+id/points"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gasLabel"
        android:text="@string/gaz"
        android:layout_alignBaseline="@+id/userName"
        android:layout_alignBottom="@+id/userName"
        android:layout_alignRight="@+id/mineralsLabel"
        android:layout_alignEnd="@+id/mineralsLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/minerals"
        android:layout_alignBaseline="@+id/mineralsLabel"
        android:layout_alignBottom="@+id/mineralsLabel"
        android:layout_toLeftOf="@+id/mineralsLabel"
        android:layout_toStartOf="@+id/mineralsLabel"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gas"
        android:layout_alignBaseline="@+id/gasLabel"
        android:layout_alignBottom="@+id/gasLabel"
        android:layout_toLeftOf="@+id/gasLabel"
        android:layout_toStartOf="@+id/gasLabel"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="4dp" />
</RelativeLayout>