<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <EditText
        android:id="@+id/identifiant"
        android:layout_width="250dp"
        android:ems="10"
        android:hint="@string/identifiant"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/se_connecter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:id="@+id/signIn" />

    <EditText
        android:id="@+id/password"
        android:ems="10"
        android:hint="@string/mot_de_passe"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:text="@string/identifiant"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:text="@string/email"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/email"
        android:layout_alignBottom="@+id/email"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:text="@string/mot_de_passe"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/identifiant"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <EditText
        android:id="@+id/email"
        android:ems="10"
        android:hint="@string/email"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/signUp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/inscription"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
