<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/researchName"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/researchLevel"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="10sp"
        android:layout_alignBottom="@+id/researchName"
        android:layout_toRightOf="@+id/researchName"
        android:layout_toEndOf="@+id/researchName" />

    <TextView
        android:text="@string/metaux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:id="@+id/researchNextCostGas" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/researchNextCostMinerals"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:text="@string/temps_de_construction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="4dp"
        android:id="@+id/textView9"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView9"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:id="@+id/researchTimeBuild" />

    <TextView
        android:text="@string/gaz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_below="@+id/researchName"
        android:layout_alignLeft="@+id/researchName"
        android:layout_alignStart="@+id/researchName"
        android:layout_marginTop="4dp" />

    <Button
        android:text="@string/rechercher"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/upgradeResearch"
        android:textSize="10sp"
        android:layout_alignTop="@+id/researchName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp" />

</RelativeLayout>