<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buildingName"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buildingLevel"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="10sp"
        android:layout_alignBottom="@+id/buildingName"
        android:layout_toRightOf="@+id/buildingName"
        android:layout_toEndOf="@+id/buildingName" />

    <Button
        android:text="Améliorer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upgradeBuilding"
        android:layout_alignTop="@+id/buildingName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="10sp" />

    <TextView
        android:text="@string/metaux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:id="@+id/buildingNextCostGas" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buildingNextCostMinerals"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:text="@string/temps_de_construction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="4dp"
        android:id="@+id/textView9"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView9"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:id="@+id/buildingTimeBuild" />

    <TextView
        android:text="@string/gaz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_below="@+id/buildingName"
        android:layout_alignLeft="@+id/buildingName"
        android:layout_alignStart="@+id/buildingName"
        android:layout_marginTop="4dp" />
</RelativeLayout>